<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:background="@drawable/custom_bg_tv">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/tv_item_recent_2"
            android:text="@string/title_dialog"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_12sdp"
            />

        <TextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/tv_item_2"
            android:text="@string/des_dialog"
            android:textColor="@color/tv_item"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_39sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/custom_bg_button_cancel"
            android:text="@string/btn_cancel"
            android:textColor="@color/tv_color_blue"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_des" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_39sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            app:backgroundTint="@color/tv_color_blue"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/custom_bg_button"
            android:text="@string/btn_delete"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_des" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>