<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.AdultsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:id="@+id/tv_des_adults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_des_content_adults"
                android:textColor="@color/tv_color_blue"
                android:layout_marginEnd="@dimen/_2sdp"
                style="@style/tv_des_about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                android:text="@string/tv_des_age_adults"
                android:textColor="@color/tv_color_blue"
                style="@style/tv_des_age_about"/>
        </LinearLayout>



        <ImageView
            android:id="@+id/img_graph"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_des_adults"
            android:src="@drawable/graph_about_adults"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_graph">

            <ImageView
                android:id="@+id/img_16"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/tv_des_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_16"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_16"
                android:textColor="#00658F"
                style="@style/tv_item_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <ImageView
                android:id="@+id/img_16_169"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_16_169"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/severely_underweight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_16_169"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_16_169"
                android:textColor="#26A1A9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <ImageView
                android:id="@+id/img_17_184"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_17_184"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/underweight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_17_184"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_17_184"
                android:textColor="#82D142"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <ImageView
                android:id="@+id/img_185_249"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_185_249"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_185_249"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_185_249"
                android:textColor="#8DC03F"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <ImageView
                android:id="@+id/img_25_299"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_25_299"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/overweight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_25_299"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_25_299"
                android:textColor="#F68121"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <ImageView
                android:id="@+id/img_30_349"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_30_349"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/obese_Class_I"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_30_349"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_30_349"
                android:textColor="#CA6E2F"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

            <ImageView
                android:id="@+id/img_35_399"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_35_399"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/obese_Class_II"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_35_399"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_35_399"
                android:textColor="#E34D28"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:paddingHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

            <ImageView
                android:id="@+id/img_40"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:src="@drawable/ic_40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@string/obese_class_III"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_40"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/tv_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_40"
                android:textColor="#F03C25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
