<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragment.StatisticsFragment">

        <TextView
            android:id="@+id/tv_title_statistics"
            style="@style/tv_title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_statistics"
            android:layout_marginTop="@dimen/_32sdp"
            android:textColor="@color/title_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_title_statistics"
            app:layout_constraintEnd_toEndOf="@id/tv_title_statistics"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_statistics"
            style="@style/tv_item_recent_2"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/tv_update"
            android:textColor="@color/tv_color_blue"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/custom_bg_statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_statistics">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/id_tablayout_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_margin="@dimen/_20sdp"
                app:tabIndicatorHeight="@dimen/_3sdp"
                app:tabIndicatorColor="@color/tv_color_blue"
                app:tabSelectedTextColor="@color/tv_color_blue"
                app:tabIndicatorGravity="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabTextAppearance="@style/MyCustomTabText">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/tab_daily" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_weekly" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_monthly" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager_chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_tablayout_statistics" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>